--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-A-Sketch!</title>
-    <link ref="stylesheet" src="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    
+    <h1>Etch-A-Sketch!</h1>
+    <div class="header">
+        <h6>Choose Grid Size</h6>
+        <button id="select" class="btn btn-danger">Select</button>
+    </div>
+    <div class="gameGrid"></div>
+    <div class="footer">
+        <button id="Black" class="btn btn-dark">Black</button>
+        <button id="Random" class="btn btn-light">Random Colour</button>
+        <button id="Reset" class="btn btn-danger">Reset</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
