Add click to draw/stop functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="header">
         <button id="select" class="btn btn-danger">Grid Size</button>
         <p id="message"></p>
+        <p id="draw"></p>
     </div>
     <div class="gameGrid"></div>
     <div class="footer">
